# context-lantern

./: AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.serena/: project.yml
_docs/agent-memory/: README.md  decisions-and-changes.md  historical-issues.md  operations-runbook.md  thread-index.md
_docs/handoff/: token治理hook-20260611-152817.md  token阈值调整-20260611-153545.md
context_lantern/: __init__.py  __main__.py  cli.py
context_lantern/adapters/: __init__.py  _registry.py  codex_stop.py  copilot_stop.py  cursor_stop.py  windsurf_stop.py
context_lantern/core/: __init__.py  decide.py  encode.py  measure.py  models.py  state.py
context_lantern/doctor/: __init__.py  checks.py
context_lantern/transports/: __init__.py  install.py  windows_cmd.py
scripts/: codex_stop_hook.py
skills/context-lantern/: SKILL.md
skills/handoff/: SKILL.md
skills/memory-curator/: SKILL.md
skills/memory-curator/references/: cursor.md
skills/session-handoff/: SKILL.md
skills/session-handoff/agents/: openai.yaml
tests/: test_codex_adapter.py  test_cursor_adapter.py  test_decide.py  test_models.py  test_state.py
