[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "context-lantern"
version = "0.2.0"
description = "Session context reminder tool for AI coding assistants"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
context_lantern = "context_lantern.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["context_lantern*"]
